--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,9 @@ services:
     name: skin-cancer-detection
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app:app
+    startCommand: gunicorn app:app --timeout 120 --workers 2
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.0
+      - key: WEB_CONCURRENCY
+        value: 2
