--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ Pillow
 google-generativeai
 python-dotenv
 transformers
-torch
+--extra-index-url https://download.pytorch.org/whl/cpu
+torch==2.0.1+cpu
+torchvision==0.15.2+cpu
 gunicorn==20.1.0
 Werkzeug>=2.0.0
